feat: add comment endpoints
